<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INFO"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

        <TextView
            android:id="@+id/textViewContactTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/CONTACT_TITLE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CONTACT"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

        <TextView
            android:id="@+id/textViewDonateTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/DONATE_TITLE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/textViewDonate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/DONATE"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

        <TextView
            android:id="@+id/textViewAuthorTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AUTHOR_TITLE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/AUTHOR"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>

</ScrollView>